--- a/src/Web/DamaAdmin/Client/_Imports.razor
+++ b/src/Web/DamaAdmin/Client/_Imports.razor
@@ -10,4 +10,5 @@
 @using Microsoft.JSInterop
 @using DamaAdmin.Client
 @using DamaAdmin.Client.Shared
+@using ApplicationCore
 @using ApplicationCore.DTOs
