Manage Collections Visibility in BO

--- a/src/Web/Backoffice/Pages/Illustrations/Details.cshtml
+++ b/src/Web/Backoffice/Pages/Illustrations/Details.cshtml
@@ -30,6 +30,12 @@
             @Html.DisplayFor(model => model.IllustrationModel.IllustrationType.Code) - @Html.DisplayFor(model => model.IllustrationModel.IllustrationType.Name)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.IllustrationModel.InMenu)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.IllustrationModel.InMenu)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.IllustrationModel.IllustrationImage)
         </dt>
         <dd>
