--- a/src/Web/DamaWeb/Pages/Tag/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Tag/Index.cshtml
@@ -8,8 +8,11 @@
         ViewBag.NoIndex = true;
     }
 }
+<a href="https://www.damanojornal.com/outlet/">
+    <img src="~/images/banner-outlet.png" title="Dama no Jornal Outlet" class="img-fluid" />
+</a>
 
-<h2 id="todos" class="title">Resultados para: @Model.TagName</h2>
+<h1 id="todos" class="title mt-3">Colecção @Model.TagName</h2>
 
 <div class="news-heading text-center">
     <img class="separator" src="~/images/barra-coracao.png" />
