--- a/src/Web/Backoffice/Pages/Illustrations/Edit.cshtml
+++ b/src/Web/Backoffice/Pages/Illustrations/Edit.cshtml
@@ -33,11 +33,11 @@
                 <a asp-page="../IllustrationTypes/Create" target="_blank">Criar Novo Tipo</a> |
                 <a asp-page="../IllustrationTypes/Index" target="_blank">Editar Tipos</a>
             </div>
-            @*<div class="form-group">
-                <label asp-for="IllustrationModel.PictureUri" class="control-label"></label>
-                <input asp-for="IllustrationModel.PictureUri" class="form-control" />
-                <span asp-validation-for="IllustrationModel.PictureUri" class="text-danger"></span>
-            </div>*@
+            <div class="form-check">
+                <input asp-for="IllustrationModel.InMenu" class="form-check-input" />
+                <label asp-for="IllustrationModel.InMenu" class="form-check-label"></label>
+                <span asp-validation-for="IllustrationModel.InMenu" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="IllustrationModel.IllustrationImage" class="control-label"></label>
 
