--- a/src/Web/Backoffice/Pages/Illustrations/Index.cshtml
+++ b/src/Web/Backoffice/Pages/Illustrations/Index.cshtml
@@ -9,48 +9,62 @@
 
 <p>
     <a asp-page="Create">Nova Ilustração</a>
-     | 
+    |
     <a asp-page="../IllustrationTypes/Index">Gerir Tipos de Ilustrações</a>
 </p>
-<table class="table table-pagination">
+<table id="tbl-illustrations" class="table table-pagination">
     <thead>
         <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.IllustrationModel[0].Code)
-                </th>
+            <th>
+                @Html.DisplayNameFor(model => model.IllustrationModel[0].Code)
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.IllustrationModel[0].Name)
             </th>
-                @*<th>
-                    @Html.DisplayNameFor(model => model.IllustrationModel[0].PictureUri)
-                </th>*@
-                <th>
-                    @Html.DisplayNameFor(model => model.IllustrationModel[0].IllustrationTypeId)
-                </th>
+            <th>
+                @Html.DisplayNameFor(model => model.IllustrationModel[0].IllustrationTypeId)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.IllustrationModel[0].InMenu)
+            </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.IllustrationModel) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Code)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            @*<td>
-                @Html.DisplayFor(modelItem => item.PictureUri)
-            </td>*@
-            <td>
-                @Html.DisplayFor(modelItem => item.IllustrationType.Code)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.Id">Editar</a> |
-                <a asp-page="./Details" asp-route-id="@item.Id">Detalhe</a> |
-                <a asp-page="./Delete" asp-route-id="@item.Id">Remover</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model.IllustrationModel)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Code)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.IllustrationType.Code)
+                </td>
+                <td>
+                    <input type="checkbox" asp-for="@item.InMenu" class="updateIllustration" item-id="@item.Id" />
+                </td>
+                <td>
+                    <a asp-page="./Edit" asp-route-id="@item.Id">Editar</a> |
+                    <a asp-page="./Details" asp-route-id="@item.Id">Detalhe</a> |
+                    <a asp-page="./Delete" asp-route-id="@item.Id">Remover</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
+@section Scripts{
+    <script>
+        $(document).ready(function () {
+            $('#tbl-illustrations').on('change', '.updateIllustration',function () {
+                var itemId = $(this).attr('item-id');
+                $.getJSON('@(Url.Page("Index", "UpdateIllustration"))' + '&id=' + itemId + '&value= ' + $(this).is(":checked"), function (data) {
+
+                });
+            });
+        });
+    </script>
+
+}
