Fix Pagination on Tag Page

--- a/src/Web/DamaWeb/Pages/Tag/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Tag/Index.cshtml
@@ -35,7 +35,8 @@
     </div>
     @if (Model.CatalogModel.CatalogItems.Count() > 0)
     {
-        @await Html.PartialAsync("_pagination", Model.CatalogModel.PaginationInfo, new ViewDataDictionary(ViewData) { { "SearchFor", Model.Tag }, { "TagName", Model.TagName }, { "TypeId", Model.CatalogModel.TypesFilterApplied }, { "IllustrationId", Model.CatalogModel.IllustrationFilterApplied } })
+        @* @await Html.PartialAsync("_pagination", Model.CatalogModel.PaginationInfo, new ViewDataDictionary(ViewData) { { "SearchFor", Model.Tag }, { "TagName", Model.TagName }, { "TypeId", Model.CatalogModel.TypesFilterApplied }, { "IllustrationId", Model.CatalogModel.IllustrationFilterApplied } }) *@
+        <partial name="_pagination" for="Model.CatalogModel.PaginationInfo"/>
     }
 </div>
 
