--- a/src/Web/DamaWeb/wwwroot/css/_custom-styles.scss
+++ b/src/Web/DamaWeb/wwwroot/css/_custom-styles.scss
@@ -488,3 +488,10 @@ iframe {
 .card-img-overlay {
     z-index: 5;
 }
+
+.nav-item > .btn:hover {
+    color: #fff !important;
+}
+.nav-item > .btn.active, .nav-item > .btn:active {
+    color: #fff !important;
+}
