--- a/src/Web/DamaWeb/wwwroot/css/site.css
+++ b/src/Web/DamaWeb/wwwroot/css/site.css
@@ -7747,3 +7747,9 @@ iframe {
 
 .card-img-overlay {
   z-index: 5; }
+
+.nav-item > .btn:hover {
+  color: #fff !important; }
+
+.nav-item > .btn.active, .nav-item > .btn:active {
+  color: #fff !important; }
