--- a/src/Web/DamaWeb/Pages/Components/Menu/Default.cshtml
+++ b/src/Web/DamaWeb/Pages/Components/Menu/Default.cshtml
@@ -2,68 +2,87 @@
 @model IEnumerable<MenuItemComponentViewModel>
 
 
-    <ul class="navbar-nav mx-auto text-nowrap">
-        @foreach (var item in Model)
+<ul class="navbar-nav mx-auto text-nowrap">
+    @foreach (var item in Model)
+    {
+        if (item.Childs.Count > 0)
         {
-            if (item.Childs.Count > 0)
-            {
-                <li class="nav-item dropdown">
+            <li class="nav-item dropdown">
+                @if (!item.IsTag)
+                {
                     <a class="nav-link dropdown-toggle d-none d-sm-block" asp-page="/Category/Index" asp-route-id="@item.NameUri">
                         @item.Name
                     </a>
-                    <a class="nav-link dropdown-toggle d-block d-sm-none" id="navbarDropdown" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle d-block d-sm-none" id="navbarDropdown" href="#" role="button"
+            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         @item.Name
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                }
+                else
+                {
+                    <a class="btn btn-outline-primary border border-primary btn-sm dropdown-toggle d-none d-sm-block" href="#">
+                        @item.Name
+                    </a>
+                    <a class="nav-link dropdown-toggle d-block d-sm-none" id="navbarDropdown" href="#" role="button"
+            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        @item.Name
+                    </a>
+                }
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    @if (!item.IsTag)
+                    {
                         <a class="dropdown-item d-block d-sm-none" asp-page="/Category/Index" asp-route-id="@item.NameUri">
                             <span class="dropdown-item-text text-primary">VER TODOS</span>
                         </a>
-                        @foreach (var child in item.Childs)
+                    }
+                    @foreach (var child in item.Childs)
+                    {
+
+                        @if (child.IsTag)
+                        {
+                            <a class="dropdown-item" href="@child.NameUri">
+                                <span class="dropdown-item-text">@child.Name</span>
+                            </a>
+                        }
+                        else if (!string.IsNullOrEmpty(child.TypeUri))
                         {
 
-                            @if (child.IsTag)
-                            {
-                                <a class="dropdown-item" href="@child.NameUri">
-                                    <span class="dropdown-item-text">@child.Name</span>
-                                </a>
-                            }
-                            else if (!string.IsNullOrEmpty(child.TypeUri))
-                            {
-
-                                <a class="dropdown-item" asp-page="/Category/Type/Index" asp-route-cat="@child.NameUri" asp-route-type="@child.TypeUri">
-                                    <span class="dropdown-item-text">@child.Name</span>
-                                </a>
-                            }
-                            else
-                            {
-                                <a class="dropdown-item" asp-page="/Category/Index" asp-route-id="@child.NameUri">
-                                    <span class="dropdown-item-text">@child.Name</span>
-                                </a>
-
-                            }
+                            <a class="dropdown-item" asp-page="/Category/Type/Index" asp-route-cat="@child.NameUri"
+                asp-route-type="@child.TypeUri">
+                                <span class="dropdown-item-text">@child.Name</span>
+                            </a>
+                        }
+                        else
+                        {
+                            <a class="dropdown-item" asp-page="/Category/Index" asp-route-id="@child.NameUri">
+                                <span class="dropdown-item-text">@child.Name</span>
+                            </a>
 
                         }
-                    </div>
-                </li>
-            }
-            else
-            {
-                <li class="nav-item">
-                    <a class="nav-link" asp-page="/Category/Index" asp-route-id="@item.NameUri">@item.Name</a>
-                </li>
 
-            }
+                    }
+                </div>
+            </li>
         }
-        <li class="nav-item d-block d-sm-none">
-            <a class="nav-link text-black-50" href="https://www.damanojornal.com/proximos-eventos/">EVENTOS</a>
-        </li>
-        <li class="nav-item d-block d-sm-none">
-            <a class="nav-link text-black-50" href="https://www.damanojornal.com/perguntas-frequentes/">PERGUNTAS FREQUENTES</a>
-        </li>
-        <li class="nav-item d-block d-sm-none">
-            <a class="nav-link text-black-50" href="#">TERMOS E CONDIÇÕES</a>
-        </li>
-        <li class="nav-item d-block d-sm-none">
-            <a class="nav-link text-black-50" href="#">POLÍTICA DE PRIVACIDADE</a>
-        </li>
-    </ul>
+        else
+        {
+            <li class="nav-item">
+                <a class="nav-link" asp-page="/Category/Index" asp-route-id="@item.NameUri">@item.Name</a>
+            </li>
+
+        }
+    }
+    <li class="nav-item d-block d-sm-none">
+        <a class="nav-link text-black-50" href="https://www.damanojornal.com/proximos-eventos/">EVENTOS</a>
+    </li>
+    <li class="nav-item d-block d-sm-none">
+        <a class="nav-link text-black-50" href="https://www.damanojornal.com/perguntas-frequentes/">PERGUNTAS
+            FREQUENTES</a>
+    </li>
+    <li class="nav-item d-block d-sm-none">
+        <a class="nav-link text-black-50" href="#">TERMOS E CONDIÇÕES</a>
+    </li>
+    <li class="nav-item d-block d-sm-none">
+        <a class="nav-link text-black-50" href="#">POLÍTICA DE PRIVACIDADE</a>
+    </li>
+</ul>
