Add vscode launch and tasks to repo; Bug Fix Edit.razor

--- a/src/Web/DamaAdmin/Client/Pages/Categories/Edit.razor
+++ b/src/Web/DamaAdmin/Client/Pages/Categories/Edit.razor
@@ -110,7 +110,7 @@ else
     {
         try
         {
-            allCategories = await Http.GetFromJsonAsync<List<CategoryDTO>>("Categories");
+            allCategories = await Http.GetFromJsonAsync<List<CategoryDTO>>("Categories/all");
             categoryModel = allCategories.SingleOrDefault(x => x.Id == Id);
 
             if (categoryModel == null)
