--- a/src/Web/DamaAdmin/Client/Pages/Categories/List.razor
+++ b/src/Web/DamaAdmin/Client/Pages/Categories/List.razor
@@ -1,8 +1,9 @@
 ﻿@page "/categorias/"
 @page "/categorias/{message}"
-@page "/categorias/pag/{PageIndex:int?}"
+@page "/categorias/pag/{pageIndex}"
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
+@using DamaAdmin.Client.Shared
 @attribute [Authorize]
 @inject HttpClient Http
 @inject IJSRuntime JSRuntime
@@ -68,10 +69,10 @@ else
                         <a href="/categorias/@item.Id" class="btn btn-warning btn-sm" role="button" title="Editar">
                             <span class="oi oi-pencil" title="Editar" aria-hidden="true"></span>
                         </a>
-                        <button class="btn btn-info btn-sm" @onclick="() => Modal.Open(item.Name, item)">
+                        <button class="btn btn-info btn-sm" @onclick="@(e => Modal.Open(item.Name, item))">
                             <span class="oi oi-eye" title="Ver" aria-hidden="true"></span>
                         </button>
-                        <button class="btn btn-danger btn-sm" @onclick="() => OnRemoveItem(item)">
+                        <button class="btn btn-danger btn-sm" @onclick="@(e => OnRemoveItem(item))">
                             <span class="oi oi-trash" title="Remover" aria-hidden="true"></span>
                         </button>
                     </td>
@@ -98,7 +99,7 @@ else
     [Parameter]
     public string Message { get; set; }
     [Parameter]
-    public int? PageIndex { get; set; }
+    public string PageIndex { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
