--- a/src/Web/DamaAdmin/Client/Pages/Categories/List.razor
+++ b/src/Web/DamaAdmin/Client/Pages/Categories/List.razor
@@ -3,6 +3,7 @@
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
 @using DamaAdmin.Client.Shared
+@using DamaAdmin.Client.Components
 
 <h2>Categorias</h2>
 
@@ -21,62 +22,71 @@
 }
 else
 {
-    <table class="table table-pagination">
-        <thead>
-            <tr>
-                <th>
-                    Nome
-                </th>
-                <th>
-                    Ordem
-                </th>
-                <th>
-                    Categoria Pai
-                </th>
-                <th>
-                    Meta Description
-                </th>
-                <th>
-                    Titulo
-                </th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in CategoryList)
-            {
-                <tr>
-                    <td>
-                        @item.Name
-                    </td>
-                    <td>
-                        @item.Order
-                    </td>
-                    <td>
-                        @item.Parent?.Name
-                    </td>
-                    <td>
-                        @item.MetaDescription
-                    </td>
-                    <td>
-                        @item.Title
-                    </td>
-                    <td>
-                        <a href="/categorias/@item.Id" class="btn btn-warning btn-sm" role="button" title="Editar">
-                            <span class="oi oi-pencil" title="Editar" aria-hidden="true"></span>
-                        </a>
-                        <button class="btn btn-info btn-sm" @onclick="@(e => Modal.Open(item.Name, item))">
-                            <span class="oi oi-eye" title="Ver" aria-hidden="true"></span>
-                        </button>
-                        <button class="btn btn-danger btn-sm" @onclick="@(e => OnRemoveItem(item))">
-                            <span class="oi oi-trash" title="Remover" aria-hidden="true"></span>
-                        </button>
-                    </td>
-                </tr>
-            }
-        </tbody>
-        <tfoot>
-        </tfoot>
-    </table>
+    <div class="row">
+        <div class="col">
+            <table class="table table-pagination">
+                <thead>
+                    <tr>
+                        <th>
+                            Nome
+                        </th>
+                        <th>
+                            Ordem
+                        </th>
+                        <th>
+                            Categoria Pai
+                        </th>
+                        <th>
+                            Meta Description
+                        </th>
+                        <th>
+                            Titulo
+                        </th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in CategoryList)
+                    {
+                        <tr>
+                            <td>
+                                @item.Name
+                            </td>
+                            <td>
+                                @item.Order
+                            </td>
+                            <td>
+                                @item.Parent?.Name
+                            </td>
+                            <td>
+                                @item.MetaDescription
+                            </td>
+                            <td>
+                                @item.Title
+                            </td>
+                            <td>
+                                <a href="/categorias/@item.Id" class="btn btn-warning btn-sm" role="button" title="Editar">
+                                    <span class="oi oi-pencil" title="Editar" aria-hidden="true"></span>
+                                </a>
+                                <button class="btn btn-info btn-sm" @onclick="@(e => Modal.Open(item.Name, item))">
+                                    <span class="oi oi-eye" title="Ver" aria-hidden="true"></span>
+                                </button>
+                                <button class="btn btn-danger btn-sm" @onclick="@(e => OnRemoveItem(item))">
+                                    <span class="oi oi-trash" title="Remover" aria-hidden="true"></span>
+                                </button>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+                <tfoot>
+                </tfoot>
+            </table>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <Pagination MetaData="MetaData" Spread="3" SelectedPage="SelectedPage" />
+        </div>
+    </div>
     <Modal @ref="Modal"></Modal>
 }
