--- a/src/Web/DamaAdmin/Client/Pages/ProductTypes/List.razor
+++ b/src/Web/DamaAdmin/Client/Pages/ProductTypes/List.razor
@@ -1,4 +1,5 @@
 ﻿@page "/tipos-de-produto/{message?}"
+@using DamaAdmin.Shared.Models
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
 @attribute [Authorize]
