--- a/src/Web/DamaAdmin/Client/Pages/Categories/Edit.razor
+++ b/src/Web/DamaAdmin/Client/Pages/Categories/Edit.razor
@@ -1,10 +1,4 @@
 ﻿@page "/categorias/{Id:int}"
-@using DamaAdmin.Shared.Models
-@using Microsoft.AspNetCore.Authorization
-@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
-@attribute [Authorize]
-@inject HttpClient Http
-@inject NavigationManager NavManager
 
 <h2>Editar Categoria @categoryModel?.Name</h2>
 <hr />
@@ -37,7 +31,7 @@ else
                 <div class="form-group">
                     <label>Categoria Pai</label>
                     <InputSelect @bind-Value="categoryModel.ParentId" class="form-control">
-                        @if (allCategories.Count == 0)
+                        @if (allCategories.Count() == 0)
                             {
                             <option class="font-italic">Loading...</option>
                             }
@@ -99,62 +93,3 @@ else
 <div>
     <a href="/categorias">Voltar para a lista</a>
 </div>
-
-@code {
-    [Parameter]
-    public int Id { get; set; }
-    private CategoryViewModel categoryModel = null;
-    private List<CategoryViewModel> allCategories = new();
-    private string statusMessage;
-
-    protected override async Task OnInitializedAsync()
-    {
-        try
-        {
-            allCategories = await Http.GetFromJsonAsync<List<CategoryViewModel>>("Categories/all");
-            categoryModel = allCategories.SingleOrDefault(x => x.Id == Id);
-
-            if (categoryModel == null)
-            {
-                var message = "Erro: Categoria não encontrada!";
-                NavManager.NavigateTo($"/categorias/{message}");
-            }
-        }
-        catch (AccessTokenNotAvailableException exception)
-        {
-            exception.Redirect();
-        }
-    }
-
-    private void NameChangeEvent()
-    {
-        categoryModel.Slug = ApplicationCore.Utils.URLFriendly(categoryModel.Name);
-    }
-
-    private async Task HandleValidSubmit()
-    {
-        if (allCategories.Any(x => x.Name == categoryModel.Name && x.Id != Id))
-        {
-            statusMessage = $"Erro: O nome da Categoria '{categoryModel.Name}' já existe!";
-            return;
-        }
-        if (allCategories.Any(x => x.Slug == categoryModel.Slug && x.Id != Id))
-        {
-            statusMessage = "Erro: Já existe um slug com o mesmo nome!";
-            return;
-        }
-        statusMessage = null;
-
-        var response = await Http.PutAsJsonAsync("categories", categoryModel);
-        if (response.StatusCode == System.Net.HttpStatusCode.OK)
-        {
-            var message = $"Categoria {categoryModel.Name} atualizada com sucesso!";
-            NavManager.NavigateTo($"/categorias/{message}");
-        }
-        else
-        {
-            var content = await response.Content.ReadAsStringAsync();
-            var message = $"Erro ao atualizar Categoria {categoryModel.Name}: ({response.StatusCode}) {content}";
-        }
-    }
-}
