Product Types List

--- a/src/Web/DamaAdmin/Client/Pages/Index.razor
+++ b/src/Web/DamaAdmin/Client/Pages/Index.razor
@@ -15,7 +15,9 @@
                 </a>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="/images/productType.jpg" class="card-img-top" alt="Tipos de Produto">
+                <a href="/tipos-de-produto">
+                    <img src="/images/productType.jpg" class="card-img-top" alt="Tipos de Produto">
+                </a>
             </div>
             <div class="card" style="width: 18rem;">
                 <img src="/images/illustration.jpg" class="card-img-top" alt="Ilustrações">
