--- a/src/Web/DamaAdmin/Client/_Imports.razor
+++ b/src/Web/DamaAdmin/Client/_Imports.razor
@@ -9,4 +9,7 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using DamaAdmin.Client
+@using DamaAdmin.Client.Components
+@using DamaAdmin.Client.Services
 @using DamaAdmin.Client.Shared
+@using DamaAdmin.Shared.Models
